# ValidateString

./: CMakeLists.txt  main.cpp
TextInput/: TextInput.cpp  TextInput.h
ValidateStr/: ValidateStr.cpp  ValidateStr.h
ValidateStr/State/: State.h
